--- a/module4/5.ORM/baitap/music_image/build.gradle
+++ b/module4/5.ORM/baitap/music_image/build.gradle
@@ -27,10 +27,10 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
     // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.20'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.2.24.RELEASE'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.2.22.RELEASE'
-    implementation group: 'org.springframework', name: 'spring-web', version: '5.2.22.RELEASE'
-    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.2'
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.2.24.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.20'
     // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
     implementation group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.1.1.RELEASE'
 
@@ -43,8 +43,8 @@ dependencies {
 // ORM
     implementation group: 'org.springframework', name: 'spring-orm', version: '5.1.5.RELEASE'
     implementation group: 'org.springframework', name: 'spring-tx', version: '5.1.5.RELEASE'
-    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.1.Final'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.47'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.24.Final'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
     implementation group: 'org.springframework', name: 'spring-jdbc', version: '4.3.14.RELEASE'
